# redundancy_solver

./: CMakeLists.txt
config/: admittance_params.yaml
cxvgen/ICRA21/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/1/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/10/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/11/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/12/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/13/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/14/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/15/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/16/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/17/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/18/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/19/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cxvgen/IROS 21 ALEXA/2/cvxgen/: ldl.c  (+11 more)
cxvgen/IROS 21 ALEXA/BACKUP/: Makefile  csolve.c  csolve.m  ldl.c  matrix_support.c  util.c
include/: redundancy_solver.h  redundancy_solver_ur.h  solver_simulator.h
launch/: ur_real.launch  ur_sim.launch
lib/: Makefile  csolve.m  cvxsolve.m  description.cvxgen  make_csolve.m  matrix_support.c  solver.c  testsolver
robots/xacro/: mmo_500.srdf  mmo_500.urdf.xacro  prbt_macro.xacro
src/: frame_tf_broadcaster.cpp  redundancy_solver.cpp  redundancy_solver_node.cpp  redundancy_solver_ur.cpp  solver_simulator.cpp  solver_simulator_node.cpp  test_goals.cpp
srv/: GetGoals.srv  GetGoalsJoints.srv  SimulateGoals.srv  SimulateGoalsJoints.srv
worlds/: first_world.world
(+143 files in other folders)
